fix chat scrolling/wrapping horizontally, close #15

--- a/assets/styles.less
+++ b/assets/styles.less
@@ -100,6 +100,13 @@ html, body {
       border-radius: 10px;
       -webkit-border-radius: 10px;
 
+      white-space: pre-wrap; /* css-3 */
+      white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+      white-space: -pre-wrap; /* Opera 4-6 */
+      white-space: -o-pre-wrap; /* Opera 7 */
+      word-wrap: break-word; /* Internet Explorer 5.5+ */
+      overflow-x: hidden;
+
       &.system {
         background-color: #66CCFF;
       }
